# pandora-spacecraft

./: .gitignore  CHANGELOG  LICENSE  Makefile  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-mkdocs.yml
docs/: README.md  background.ipynb  demo.ipynb  spacecraft.md  startrackers.ipynb  tlemode.ipynb
docs/javascripts/: force-mathjax.js
docs/stylesheets/: custom.css
src/pandoraspacecraft/: __init__.py  maintenance.py  spacecraft.py  utils.py
src/pandoraspacecraft/data/buildspice/: tle_to_spk.tm
src/pandoraspacecraft/data/tle/: pandora.2026-01-11T18_20_11.200001Z.tle  pandora_2026-01-13T23_53_31.522Z.tle  pandora_2026-01-14T00_13_48.119Z.tle  pandora_2026-01-14T00_33_27.741Z.tle  pandora_2026-01-14T19_46_08.518Z.tle  pandora_2026-01-14T20_13_30.346Z.tle  pandora_2026-01-16T01_36_09.605Z.tle  pandora_2026-01-16T18_45_04.906Z.tle  pandora_2026-01-17T18_45_05.336Z.tle  pandora_2026-01-20T23_37_31.720Z.tle  pandora_2026-01-21T22_08_07.531Z.tle  pandora_2026-01-22T00_37_30.907Z.tle  pandora_2026-01-23T00_00_03.734Z.tle  pandora_2026-01-24T02_33_58.866Z.tle  pandora_2026-01-25T00_00_05.382Z.tle  pandora_2026-01-26T00_00_05.251Z.tle  pandora_2026-01-27T00_00_05.122Z.tle  pandora_2026-01-28T00_00_05.433Z.tle  pandora_2026-01-29T00_00_05.926Z.tle  pandora_2026-01-29T18_01_21.792Z.tle  pandora_2026-01-30T00_00_04.190Z.tle  pandora_2026-01-30T18_45_05.621Z.tle  pandora_2026-01-31T00_00_06.853Z.tle  pandora_2026-02-01T00_00_07.489Z.tle  pandora_2026-02-02T00_00_06.929Z.tle  pandora_2026-02-03T00_00_06.158Z.tle  (+250 more)
tests/: test_pandoraspacecraft.py
(+282 files in other folders)
