[tool.poetry]
name = "pandoraspacecraft"
version = "1.1.7"
description = ""
authors = ["Christina Hedges <christina.l.hedges@nasa.gov>"]
readme = "docs/README.md"

exclude = [
  "src/pandoraspacecraft/data/kernels/Pandora/*.bsp",
  "src/pandoraspacecraft/data/kernels/Pandora/*.bc",
]


[tool.poetry.dependencies]
python = ">=3.9,<4.0"
spiceypy = "^6.0.0"
matplotlib = "^3.9.2"
astropy = ">=5.0.0"
pandas = "^2.2.3"
sgp4 = "^2.25"
tqdm = "^4.67.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^25.1.0"
isort = "^6.0.0"
flake8 = "^7.1.2"
jupyterlab = "^4.3.5"
mkdocs = "^1.6.1"
mkdocs-jupyter = "^0.25.1"
mkdocs-material = "^9.6.5"
pytkdocs = {version = "^0.16.2", extras = ["numpy-style"]}
mkdocs-include-markdown-plugin = "^7.1.4"
mkdocstrings = {version = "^0.28.2", extras = ["python"]}
jupyter-contrib-nbextensions = "^0.7.0"
notebook = ">=6.0.0,<7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
